Use  in Table::FromRecordBatches to fix ARROW-8641